<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="Cửa hàng"
        app:titleTextColor="@android:color/white">

        <ImageButton
            android:id="@+id/imgbtn_checkin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="3dp"
            android:background="@drawable/ic_checkin"/>

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="15dp"
            android:layout_height="10dp"
            android:layout_gravity="left"
            android:background="@drawable/icon_arrow_down_white"
            android:visibility="gone" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ripple"
        android:layout_below="@+id/scrollView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="#585858"
        app:mrl_rippleDelayClick="false"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center"
            android:background="@color/color_main"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ll_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingBottom="5dp">


                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner_rout"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/route"
                        android:textSize="15sp"
                        app:ms_background_color="@color/colorPrimary"
                        app:ms_dropdown_height="280dp"
                        app:ms_text_color="@android:color/white" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner_store"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/store"
                        android:textSize="15sp"
                        app:ms_background_color="@color/colorPrimary"
                        app:ms_dropdown_height="280dp"
                        app:ms_text_color="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_main_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingBottom="5dp">


                <LinearLayout
                    android:id="@+id/ll_title_main_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_main_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Sản phẩm chính"
                        android:textColor="@drawable/text_color"
                        android:textSize="17sp" />

                    <View
                        android:id="@+id/line_title_main_product"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/view_color" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:id="@+id/ll_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_product_name"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_below="@+id/spinner_product_type"
                            android:layout_weight="0.3"
                            android:text="@string/product_name"
                            android:textSize="14sp"
                            app:ms_background_color="@color/white"
                            app:ms_dropdown_height="wrap_content"
                            app:ms_dropdown_max_height="280dp"
                            app:ms_text_color="@color/color_main" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="0.6"
                            android:background="@android:color/white"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:background="@drawable/icon_cart" />

                            <EditText
                                android:id="@+id/edt_number_product"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:background="@color/transparent"
                                android:hint="@string/number"
                                android:inputType="number"
                                android:paddingLeft="10dp"
                                android:textColor="@color/color_main"
                                android:textSize="14sp"
                                android:maxLength="5"
                                android:imeOptions="actionDone"/>

                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_tag_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:id="@+id/ll_title_tag_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vt_title_tag_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Sản phẩm đổi tem"
                        android:textColor="@drawable/text_color"
                        android:textSize="17sp" />

                    <View
                        android:id="@+id/line_title_tag_product"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/view_color" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_content_tag_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner_tag_product"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="0.3"
                        android:text="@string/promotion_name"
                        android:textSize="14sp"
                        app:ms_background_color="@color/white"
                        app:ms_dropdown_height="wrap_content"
                        app:ms_dropdown_max_height="280dp"
                        app:ms_text_color="@color/color_main" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.6"
                        android:background="@android:color/white"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/icon_cart" />

                        <EditText
                            android:id="@+id/edt_number_tag_product"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/transparent"
                            android:hint="@string/number"
                            android:inputType="number"
                            android:paddingLeft="10dp"
                            android:textColor="@color/color_main"
                            android:textSize="14sp"
                            android:maxLength="5"
                            android:imeOptions="actionDone"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:id="@+id/ll_title_promotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vt_title_title_promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Sản phẩm khuyến mãi"
                        android:textColor="@drawable/text_color"
                        android:textSize="17sp" />

                    <View
                        android:id="@+id/line_title_title_promotion"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/view_color" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_content_promotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner_promotion"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/spinner_product_type"
                        android:layout_weight="0.3"
                        android:text="@string/promotion_name"
                        android:textSize="14sp"
                        app:ms_background_color="@color/white"
                        app:ms_dropdown_height="wrap_content"
                        app:ms_dropdown_max_height="280dp"
                        app:ms_text_color="@color/color_main" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.6"
                        android:background="@android:color/white"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/icon_cart" />

                        <EditText
                            android:id="@+id/edt_number_promotion"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/transparent"
                            android:hint="@string/number"
                            android:inputType="number"
                            android:paddingLeft="10dp"
                            android:textColor="@color/color_main"
                            android:textSize="14sp"
                            android:maxLength="5"
                            android:imeOptions="actionDone"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@color/gray_transparent_light_main">

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/icon_bag_money" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:textColor="@color/color_main"
                        android:textSize="15sp" />


                </LinearLayout>


                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.4"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="#585858"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_box"
                        android:text="@string/add"
                        android:textColor="@color/white" />

                </com.balysv.materialripple.MaterialRippleLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</RelativeLayout>
